--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         
         <div id="buttons">
                 <div class="tim-title">
-                    <h3>Buttons <small> Pick your class </small></h3>
+                    <h3>Buttons <small> Pick your class! </small></h3>
                 </div>
                 
                 <div class="row tim-row">
