More little edits

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="http://creative-tim.com">
+                <a href="https://satanscat.github.io/SatansCat.io/">
                      <div class="logo-container">
                         <div class="logo">
                             <img src="assets/img/new_logo.png">
@@ -60,9 +60,9 @@
     
     <div class='blurred-container'>
         <div class="motto">
-            <div>Get</div>
-            <div class="border no-right-border">Sh</div><div class="border">it</div>
-            <div>Done</div>
+            <div>Active</div>
+            <div class="border no-right-border">Design</div><div class="border">Development</div>
+            <div>Portfolio</div>
         </div>
         <div class="img-src" style="background-image: url('assets/img/cover_4.jpg')"></div>
         <div class='img-src blur' style="background-image: url('assets/img/cover_4_blur.jpg')"></div>
