--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class='blurred-container'>
         <div class="motto">
             <div>Active</div>
-            <div class="border no-right-border">Design</div><div class="border">Development</div>
+            <!--<div class="border no-right-border">Design</div><div class="border">Development</div>-->
             <div>Portfolio</div>
         </div>
         <div class="img-src" style="background-image: url('assets/img/cover_4.jpg')"></div>
