Fixed problem with the picture overlap; added text

--- a/index.html
+++ b/index.html
@@ -77,23 +77,26 @@
             <div class="row">
                 <div class="col-md-7 col-md-offset-0 col-sm-10 col-sm-offset-1">
                     <div class="text-center">
-                        <img src="assets/img/Enda.jpg" alt="Rounded Image" class="img-rounded img-responsive img-me">
-                        <img src="assets/img/SatCat.jpg" alt="Rounded Image" class="img-rounded img-responsive img-sat overlay">
+                        <div class="img-overlap">
+                            <img src="assets/img/Enda.jpg" alt="Rounded Image" class="img-rounded img-responsive img-me">
+                            <img src="assets/img/SatCat.jpg" alt="Rounded Image" class="img-rounded img-responsive img-sat overlay">
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-5 col-sm-12">
                                 <h1 class="text-center">About Me
                                 
-                                <small class="subtitle">Get to know us</small></h1>
+                                <small class="subtitle">Who is this guy?</small></h1>
                                 <hr>
                                 <p>
-                                Creative Tim offers Bootstrap based design elements that speed up your development work. From plugins to complex kits, we have everything you need. 
+                                Hi! I'm Enda. Software Engineer, lover of problem solving and artistic expression. And this is my Portfolio; Here I'll show off all the bits and pieces I've worked on over the years.
                                 </p>
                                 <p>
-                                    We love the web and care deeply for how users interact with a digital product. The idea behind Creative Tim was creating a standard of things we actually need and would personally use inside our web projects. We power businesses and individuals to create better looking web projects around the world.
+                                I've been all over when it comes to programming in its various forms. From VR/AR to mobile and everything in between. My Batchelors Degree in Computer Science covered a wide variety of subjects; including web development, image processing, machine learning, cyber security, software design/development and a whole host of programming languages. 
                                 </p>
                                 <p>
-                                We take great interest in how our customers use our resources and offer strong support and unlimited updates. We are constantly thinking about how to make our products intuitive, beautiful and extremely easy to understand, so feel free to tell us your thoughts!                                   
+                                And if you see something missing; I'm always eager to add a new tool to my toolbelt. As long as there's problems to be solved and exciting new concepts to explore; I'll take to it faster than a duck to water!
+Got any suggestions/positions you think I might like? Send me on an email! I'll be more than happy to take a look.                                   
                                 </p>
 
                 </div>
