Fixed proportions on small phone size

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div id="extras">
             <div class="space"></div>
             <div class="row">
-                <div class="col-md-7 col-md-offset-0 col-sm-10 col-sm-offset-1">
+                <div class="col-md-7 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12">
                     <div class="text-center">
                         <div class="img-overlap">
                             <img src="assets/img/Enda.jpg" alt="Rounded Image" class="img-rounded img-responsive img-me">
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5 col-sm-12">
+                <div class="col-md-5 col-sm-12 col-xs-12 move-txt-down-xs move-txt-down-sm" >
                                 <h1 class="text-center">About Me
                                 
                                 <small class="subtitle">Who is this guy?</small></h1>
@@ -105,6 +105,13 @@ Got any suggestions/positions you think I might like? Send me on an email! I'll 
     <!--     end extras -->    
     </div>
 <!-- end container -->
+
+
+    <div class="container tim-container">
+        <div class="col-md-3 col-sm-6">
+            <button href="#fakelink" class="btn btn-block btn-lg btn-info btn-fill">Filled Button</button>
+        </div>
+    </div>
 
 <div class="main">
     <div class="container tim-container">
