Added contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -49,7 +49,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                    <li><a href="contacts.html" class="btn btn-round btn-default">Contact</a></li>
+                   <!-- In case I need more buttons -->
                </ul>
               
             </div><!-- /.navbar-collapse -->
@@ -74,8 +74,32 @@
     
 </div>
 
-<div class="container" style="width=100%">
-    <img class="cv-img" src="assets/img/enda-CV.png">
+<div class='blurred-container contacts-title'>
+    <div class="motto">
+        <div>Contact</div>
+        <div>Information</div>
+    </div>
+</div>
+
+<div class="container ui-widget-content btn-round">
+    <div class="row tim-row">
+    <img class="col-md-2" src="assets/img/LinkedIn.png">
+    <p class="col-md-10">
+        https://www.linkedin.com/in/enda-keane-a18b96158/
+    </p>
+    </div>
+    <div class="row tim-row">
+    <img class="col-md-2" src="assets/img/newgmaillogo.png">
+    <p class="col-md-10">
+        Enda.Keane.Dev@gmail.com
+    </p>
+    </div>
+    <div class="row tim-row">
+    <img class="col-md-2" src="assets/img/github-logo.png">
+    <p class="col-md-10">
+        https://github.com/SatansCat
+    </p>
+    </div>
 </div>
 
 </body>
