--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                    <li><a href="components.html">Components</a></li>
+                    <li><a href="contacts.html" class="btn btn-round btn-default">Contact</a></li>
                     
-                    <li><a href="http://www.creative-tim.com/product/get-shit-done-kit" class="btn btn-round btn-default">Download</a></li>
+                    <!--<li><a href="http://www.creative-tim.com/product/get-shit-done-kit" class="btn btn-round btn-default">Download</a></li>-->
                </ul>
               
             </div><!-- /.navbar-collapse -->
@@ -89,14 +89,14 @@
                                 <small class="subtitle">Who is this guy?</small></h1>
                                 <hr>
                                 <p>
-                                Hi! I'm Enda. Software Engineer, lover of problem solving and artistic expression. And this is my Portfolio; Here I'll show off all the bits and pieces I've worked on over the years.
+                                Hi! I'm Enda. Software Engineer, lover of problem solving and artistic expression. Here I'll show off all the bits and pieces I've worked on over the years.
                                 </p>
                                 <p>
-                                I've been all over when it comes to programming in its various forms. From VR/AR to mobile and everything in between. My Batchelors Degree in Computer Science covered a wide variety of subjects; including web development, image processing, machine learning, cyber security, software design/development and a whole host of programming languages. 
+                                I've been all over when it comes to programming in its various forms, from VR/AR to mobile and everything in between. My Batchelors Degree in Computer Science covered a wide variety of subjects; including web development, image processing, machine learning, cyber security, software design/development and a whole host of programming languages. 
                                 </p>
                                 <p>
-                                And if you see something missing; I'm always eager to add a new tool to my toolbelt. As long as there's problems to be solved and exciting new concepts to explore; I'll take to it faster than a duck to water!
-Got any suggestions/positions you think I might like? Send me on an email! I'll be more than happy to take a look.                                   
+                                I'm always eager to add a new tool to my toolbelt. As long as there's problems to be solved and exciting new concepts to explore; I'll take to it faster than a duck to water!
+Got any openings you think I might be suitable for? Send me on an email! I'll be more than happy to take a look.
                                 </p>
 
                 </div>
@@ -168,6 +168,9 @@ Got any suggestions/positions you think I might like? Send me on an email! I'll 
              <div class="col-md-12 text-center">
                 <div class="credits">
                     &copy; <script>document.write(new Date().getFullYear())</script> Get Shit Done Kit by <a href="http://creative-tim.com"> Creative Tim</a>, made with <i class="fa fa-heart heart" alt="love"></i> for a better web.
+                </div>
+                <div class="credits">
+                    &copy; <script>document.write(new Date().getFullYear())</script> Repurposed by Enda for a better Portfolio.
                 </div>
             </div>
         </div>
