Finished contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -82,23 +82,24 @@
 </div>
 
 <div class="container ui-widget-content btn-round">
-    <div class="row tim-row">
-    <img class="col-md-2" src="assets/img/LinkedIn.png">
-    <p class="col-md-10">
-        https://www.linkedin.com/in/enda-keane-a18b96158/
-    </p>
-    </div>
-    <div class="row tim-row">
-    <img class="col-md-2" src="assets/img/newgmaillogo.png">
-    <p class="col-md-10">
+    
+    <div class="row">
+    <img class="col-md-2 col-sm-2 col-xs-3" src="assets/img/newgmaillogo.png">
+    <a class="col-md-10 col-sm-10 col-xs-9 contacts-links">
         Enda.Keane.Dev@gmail.com
-    </p>
+    </a>
     </div>
-    <div class="row tim-row">
-    <img class="col-md-2" src="assets/img/github-logo.png">
-    <p class="col-md-10">
+    <div class="row">
+    <img class="col-md-2 col-sm-2 col-xs-3" src="assets/img/github-logo.png">
+    <a href="https://github.com/SatansCat" class="col-md-10 col-sm-10 col-xs-9 contacts-links text-primary">
         https://github.com/SatansCat
-    </p>
+    </a>
+    </div>
+    <div class="row">
+    <img class="col-md-2 col-sm-2 col-xs-3" src="assets/img/LinkedIn.png">
+    <a href="https://www.linkedin.com/in/enda-keane-a18b96158/" class="col-md-10 col-sm-10 col-xs-9 contacts-links text-primary">
+        https://www.linkedin.com/in/enda-keane-a18b96158/
+    </a>
     </div>
 </div>
 
