More work on carousel

--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@ Got any openings you think I might be suitable for? Send me on an email! I'll be
         </div>
     </div>
 
-    <hr>
+    <hr style="margin-bottom: 0">
 
+    <h1 class="carousel-header"> Past Projects </h1>
 <div id="carousel">
     <!--    
             IMPORTANT - This carousel can have a special class for a smooth transition "gsdk-transition". Since javascript cannot be overwritten, if you want to use it, you can use the bootstrap.js or bootstrap.min.js from the GSDKit or you can open your bootstrap.js file, search for "emulateTransitionEnd(600)" and change it with "emulateTransitionEnd(1200)"     
@@ -132,9 +133,10 @@ Got any openings you think I might be suitable for? Send me on an email! I'll be
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="assets/img/carousel_blue.png" alt="Awesome Image">
+          <img src="assets/img/carousel_blue.png" alt="Super Farming Boy">
         </div>
         <div class="item">
+          <p class="carousel-titles"> Mater Private Fire Simulation </p>
           <img src="assets/img/carousel_green.png" alt="Awesome Image">
         </div>
         <div class="item">
