Finished carousel; started adding game pages

--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@ Got any openings you think I might be suitable for? Send me on an email! I'll be
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="assets/img/carousel_blue.png" alt="Super Farming Boy">
+          <a href="game-page-sfb.html"><img src="assets/img/carousel_blue.png" alt="Super Farming Boy"></a>
         </div>
         <div class="item">
-          <p class="carousel-titles"> Mater Private Fire Simulation </p>
+          <p class="carousel-titles"> Mater Private VR Fire Simulation </p>
           <img src="assets/img/carousel_green.png" alt="Awesome Image">
         </div>
         <div class="item">
           <img src="assets/img/carousel_red.png" alt="Awesome Image">
         </div>
         <div class="item">
-          <img src="assets/img/carousel_green.png" alt="Awesome Image">
+          <img src="assets/img/carousel_Returned.png" alt="Awesome Image">
         </div>
       </div>
     
