--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Got any openings you think I might be suitable for? Send me on an email! I'll be
         </div>
         <div class="item">
           <p class="carousel-titles"> Mater Private VR Fire Simulation </p>
-          <img src="assets/img/carousel_green.png" alt="Awesome Image">
+          <a href="game-page-mater.html"><img src="assets/img/carousel_green.png" alt="Awesome Image"></a>
         </div>
         <div class="item">
           <img src="assets/img/carousel_red.png" alt="Awesome Image">
