Testing Uncharged Video

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@ Got any openings you think I might be suitable for? Send me on an email! I'll be
         </div>
         <div class="item">
           <p class="carousel-titles"> Mater Private VR Fire Simulation </p>
-          <a href="game-page-mater.html"><img src="assets/img/carousel_green.png" alt="Awesome Image"></a>
+          <a href="game-page-mater.html"><img src="assets/img/carousel_green.png" alt="Mater Fire Sim"></a>
         </div>
         <div class="item">
-          <img src="assets/img/carousel_red.png" alt="Awesome Image">
+          <a href="game-page-uncharged.html"><img src="assets/img/carousel_red.png" alt="Uncharged"></a>
         </div>
         <div class="item">
           <img src="assets/img/carousel_Returned.png" alt="Awesome Image">
