Finished Uncharged page

--- a/game-page-uncharged.html
+++ b/game-page-uncharged.html
@@ -88,25 +88,20 @@
     <div class="container tim-container">
          <div class="row">
                 <div class="col-md-5 col-sm-12 col-xs-12" >
-                    <h1 class="text-center">My Time at LemonChili
+                    <h1 class="text-center">Games Fleadh
                                 
                     <!--<small class="subtitle">Who is this guy?</small></h1>-->
                     <hr>
                     <p>
-                        While at LemonChili the main project I worked on was Super Farming Boy. A cute farming game with a fun combo mechanic for havesting crops that I loved to find new limits for. I worked alongside a very small team of programmers, artists and designers to bring this and some of their other IPs to life.
+                        Uncharged was a game I put together in coordination with 3 other classmates. We built it during college under some time constraints to take part in <a href ="https://tus.ie/gamesfleadh/">Games Fleadh</a> a game building competition. The game itself was a survival shooter with horror elements. 
                     </p>
                     <p>
-                        I was responsable for everything from bug fixing; to adding new features coming down the pipeline; to putting our current feature list through rigorous testing to find and categorise any problems before they have a chance to rear their head. After a while working for them, I was even promoted to Director for the Irish branch.
-                    </p>
-                    <p>
-                        At one point during my time working there, I was put in charge of an even smaller team segment to lead the begining of the development cycle for a new idea they were contemplating bringing to market. During my time leading this smaller group I had to establish what features/changes management were looking for; cut those features up into smaller tasks for use in the weekly sprint; and make sure those tasks and deadlines were met.
+                        It was a lot of fun working together with my friends to make something we could all be proud of. We were all from a programming background (besides me; as I enjoy drawing for leasure) so there wasn't really defined roles for each member of the team. We mostly just assembled a list of all the tasks that needed completing and went to work on what we thought suited us best; helping eachother out when we could.
                     </p>
                 </div>
                 <div class="col-md-7 col-md-offset-0 col-sm-10 col-xs-12">
                     <div class="text-center col-md-7 link-buttons-container">
-                        <a href="https://store.steampowered.com/app/659300/Super_Farming_Boy/" target="_blank" class="btn btn-block btn-lg btn-info btn-fill link-button">Steam</a>
-                        <a href="https://store.epicgames.com/en-US/p/super-farming-boy-c4ec02" target="_blank" class="btn btn-block btn-lg btn-info btn-fill link-button">Epic Games</a>
-                        <a href="https://www.superfarmingboy.com/" target="_blank" class="btn btn-block btn-lg btn-info btn-fill link-button">Website</a>
+                        <a href="https://lostbones.itch.io/uncharged" target="_blank" class="btn btn-block btn-lg btn-info btn-fill link-button">Itch.io</a>
                     </div>
                 </div>
             </div>
@@ -114,7 +109,7 @@
         <hr>
         <div class="row">
             <div class="col-md-5 col-sm-12 col-xs-12" >
-                <img src="assets/img/letter-of-recommendation.png" class="img-rounded img-responsive letter-of-recommendation">
+                <img src="assets/img/Uncharged_Bar.png" class="img-rounded img-responsive letter-of-recommendation">
             </div>
             <div class="col-md-4 col-md-offset-2 col-sm-10 col-xs-12">
                 <h1 class="text-center">
@@ -122,13 +117,13 @@
                     <!--<small class="subtitle">Who is this guy?</small></h1>-->
                     <hr>
                     <p>
-                        I thoroughly enjoyed my time working at LemonChili; we had a lovely team and I like to think we worked well together. Alas due to finance reasons they had to make me and the rest of the Irish cluster redundant; closing the branch I worked at. I'm greatful for the time I had there; and all the learning opptortunities and friends I made along the way. I hope somewhere out there; they're still having just as much fun as we had; working on Super Farming Boy together. 
+                        One feature I am particularly proud of was how health ammo and your light radius was calculated. This was a design decision I pitched to the group early on; and everyone seemed thrilled with it. 
                     </p>
                     <p>
-                        If you want to give the game a try; feel free to check out their Steam page, Epic store page, or even their website through the buttons above! 
+                        To explain; In the game your health, ammo and how far you can see, is all governed by the same stat; what little energy you have left. Every shot you fire brings you closer to your end; and the only thing holding off it's inevitable approach is gathering the dying sparks from those who jealously chase your light.
                     </p>
                     <p>
-                        It seems I had left a decent impression on them too. Seeing this letter of recommendation arriving in my email shortly after parting ways.
+                        I found that this feature emphasised staying on the move; as staying in one place for too long would lead you to starve yourself of energy. It drove up the tension quite a bit too; since every hit you took; every shot you fired, let you see a little less of the sea of automata marching towards you. Sometimes diving into the hoard becomes the only way to get enough energy to light your way back out again.
                     </p>
                     <p>
                         Good luck out there Lemon Team! Keep those fever points flowing!
