Fixed some formatting and added the Returned page

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Got any openings you think I might be suitable for? Send me on an email! I'll be
           <a href="game-page-uncharged.html"><img src="assets/img/carousel_red.png" alt="Uncharged"></a>
         </div>
         <div class="item">
-          <img src="assets/img/carousel_Returned.png" alt="Awesome Image">
+          <a href="game-page-returned.html"><img src="assets/img/carousel_Returned.png" alt="Awesome Image"></a>
         </div>
       </div>
     
