--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Got any openings you think I might be suitable for? Send me on an email! I'll be
                     &copy; <script>document.write(new Date().getFullYear())</script> Get Shit Done Kit by <a href="http://creative-tim.com"> Creative Tim</a>, made with <i class="fa fa-heart heart" alt="love"></i> for a better web.
                 </div>
                 <div class="credits">
-                    &copy; <script>document.write(new Date().getFullYear())</script> Repurposed by Enda for a better Portfolio.
+                    &copy; <script>document.write(new Date().getFullYear())</script> Repurposed with <i class="fa fa-heart heart" alt="love"></i> by Enda for a better Portfolio.
                 </div>
             </div>
         </div>
